Know it wall meta info edit

--- a/app/templates/episode_page.html
+++ b/app/templates/episode_page.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{audiodocs[0].topic_description}}">
-  <meta name="keywords" content="Knowitwall, Know It Wall, audio-documentary, audiodoc, outreach, academia, insightful, science, humanities">
+  <meta name="keywords" content="Knowitwall, Know it Wall, audio-documentary, audiodoc, outreach, academia, insightful, science, humanities">
   <meta name="author" content="">
   <meta property="og:image" content="{{ audiodocs[0].topic_image }}" />
   <meta property="og:title" content="{{audiodocs[0].topic_name | safe}}{% if audiodocs[0].video_embed %} [Video]{% elif audiodocs[0].audio_mp3 %} [Audio]{% else %}{% endif %}"/>
