--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -9,12 +9,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Know it Wall is a place for inquisitive minds. From the sciences to the humanities, let world-class researchers excite your curiosity.">
+  <meta name="description" content="Know it Wall (KiW) is a place for inquisitive minds. Based at UCL and Imperial College London, KiW works with academics to create documentaries and articles about the subjects they dedicate their lives to.">
   <meta name="keywords" content="Knowitwall, Know it Wall, audio-documentary, audiodoc, outreach, academia, insightful, science, humanities">
   <meta name="author" content="">
   <meta property="og:image" content="{{config.AWS_URL}}/static/Images/KiW_banner.jpg"/>
   <meta property="og:title" content="Know it Wall" />
-  <meta property="og:description" content="Know it Wall is a place for inquisitive minds. From the sciences to the humanities, let world-class researchers excite your curiosity." />
+  <meta property="og:description" content="Know it Wall (KiW) is a place for inquisitive minds. Based at UCL and Imperial College London, KiW works with academics to create documentaries and articles about the subjects they dedicate their lives to." />
   <meta property="og:url" content="http://knowitwall.com/" />
   <link rel="icon" href="{{config.AWS_URL}}/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
