--- a/app/templates/about_page.html
+++ b/app/templates/about_page.html
@@ -140,7 +140,7 @@ hidden
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
         <p class="flash_sem_description">
-          Flash Seminars are one-off discussions that bring the people of London together to explore thought-provoking topics featured on Know it Wall. Anyone is welcome to come and join the discussion (it’s free!), which is led by an academic who is a expert in the topic of the Flash Seminar. After a brief introduction to the topic by the academic, Flash Seminars are a meeting of typically an hour long in a pub where people talk about an interesting topic.
+          Flash seminars are one-off discussions in a London pub where topics featured on Know it Wall are explored by a leading academic and the general public. Sessions include a 15min introduction by the academic followed by an interactive discussion between everyone. They typically last for an hour, and are free for anyone to join.
         </p>
       </div>
     </div>
