--- a/app/static/css/episode_page.css
+++ b/app/static/css/episode_page.css
@@ -370,3 +370,122 @@ header .container_video{
   padding-top:10px;
   }
 }
+
+
+/* Transcript image stylings */
+
+.fancybox-image{
+  border-radius: 4px;
+}
+.figure_transcript_middle{
+  text-align:center;
+  padding-top: 1.5em;
+  padding-bottom:0.8em;
+  background-color: #F9F9F9;
+  border-radius: 5px;
+  padding-left: 4em;
+  padding-right: 4em;
+  width: 75%;
+  margin: auto;
+  margin-bottom: 1.5em;
+  margin-top: 1.5em;
+}
+.figure_transcript_left{
+  float: left;
+  margin: 1em 1.3em 0 0;
+  background-color:#F9F9F9;
+  padding-top: 2em;
+  padding-right:2em;
+  padding-left:2em;
+  padding-bottom:1.5em;
+  text-align:center;
+  max-width: 50%;
+  border-radius: 5px;
+}
+.tr_image_left{
+  max-width: 100%;
+  min-width: 55%;
+  max-height: 550px;
+  margin-bottom:1em;
+  border-radius: 3px;
+}
+.tr_image_middle{
+  max-width:100%;
+  max-height: 600px;
+  margin-bottom:9px;
+  border-radius: 8px;
+}
+.figure_transcript_double{
+  text-align:center;
+  margin-top: 2em;
+  margin-bottom: 2em;
+  padding-top: 1.5em;
+  padding-bottom:0.8em;
+  margin-left: 9%;
+  margin-right:9%;
+  background-color: #F9F9F9;
+  padding-left: 30px;
+  padding-right:30px;
+  border-radius: 5px;
+}
+.tr_image_double{
+  width:100%;
+  height:100%;
+  border-radius: 3px;
+  padding-bottom: 0.8em;
+}
+
+@media(max-width:420px){
+  .figure_transcript_left{
+    margin-right: 0%;
+    margin-left: 0%;
+    padding-right:1em;
+    padding-left:1em;
+  }
+  .Betrothal_figcaption{
+    padding: 0px;
+  }
+}
+@media(max-width: 730px){
+ .after_image{
+   clear:both;
+ }
+ .figure_transcript_left{
+   float:none;
+   margin:auto;
+ }
+}
+@media only screen and (max-width:991px) {
+  .figure_transcript_middle{
+    margin-left: 0%;
+    margin-right: 0%;
+    padding-left: 1em;
+    padding-right: 1em;
+    width: 100%;
+  }
+  .tr_image_left{
+    width: 90%;
+    height: auto;
+  }
+  .figure_transcript_left{
+    margin-right: 0%;
+    margin-left: 0%;
+    padding-right:0em;
+    padding-left:0em;
+    max-width: 100%;
+    margin-bottom: 1em;
+  }
+  .figure_transcript_double{
+    text-align:center;
+    margin-top: 2em;
+    margin-bottom: 2em;
+    padding-top: 1.5em;
+    padding-bottom:0.8em;
+    margin-left: 0;
+    margin-right: 0;
+    background-color: #F9F9F9;
+    padding-left: 30px;
+    padding-right:30px;
+    border-radius: 5px;
+  }
+}
